# music-download

./: index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: api.ts
