[package]
name = "player-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "player_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19.0"
tokio = { version = "1.41.0",features = ["full"] }
reqwest = { version="0.12.8",features = ["blocking"] }
tempfile = "3.13.0"
serde_urlencoded = "0.7.1"
url = "2.5.2"
thiserror = "1.0.65"
tauri-plugin-http = "2"
anyhow = "1.0.91"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"

